@@ -1,0 +1,6 @@
+dctr <-
+function(x)
+{
+    class(x) <- c("dctr", class(x))
+    x
+}
